syntax = "proto3";

package user;

service UserService {
    rpc GetUserById(GetUserByIdRequest) returns (User);
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}

message GetUserByIdRequest {
    int32 id = 1;
}

message User {
    int32 id = 1;
    string username = 2;
    string email = 3;
   string createdAt = 4;
}
  message GetUsersRequest {

 }
message GetUsersResponse {
  repeated User users = 1;
}